--- a/templates/ingredient/show.html.twig
+++ b/templates/ingredient/show.html.twig
@@ -12,19 +12,19 @@
                 <td>{{ ingredient.id }}</td>
             </tr>
             <tr>
-                <th>Nom</th>
+                <th>Name</th>
                 <td>{{ ingredient.name }}</td>
             </tr>
             <tr>
-                <th>Allergen ?</th>
+                <th>IsAllergen</th>
                 <td>{{ ingredient.isAllergen ? 'Yes' : 'No' }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('ingredient.index') }}">Liste d'ingredients</a>
+    <a href="{{ path('app_ingredient_index') }}">back to list</a>
 
-    <a href="{{ path('ingredient.edit', {'id': ingredient.id}) }}">Modifier</a>
+    <a href="{{ path('app_ingredient_edit', {'id': ingredient.id}) }}">edit</a>
 
-   
+    {{ include('ingredient/_delete_form.html.twig') }}
 {% endblock %}
