--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,19 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modification de l'utilisateur
-{% endblock %}
+{% block title %}Modification de l'utilisateur{% endblock %}
 
 {% block body %}
-	<div class="container">
-		<h1 class="mt-4">Formulaire de modification des informations de l'utilisateur</h1>
-		{% for message in app.flashes('warning') %}
+<div class="container">
+<h1 class="mt-4">Modifier le patient</h1>
+{% for message in app.flashes('warning') %}
 			<div class="alert alert-warning mt-4">
 				{{ message }}
 			</div>
 		{% endfor %}
 
 
-		{{ form_start(form) }}
+	{{ form_start(form) }}
 
 		<div class="form-group" style="color: rgb(13, 108, 149); font-size: 1.4rem;">
 			{{ form_label(form.fullName) }}
@@ -28,50 +27,50 @@
 			<div class="form-error">
 				{{ form_errors(form.email) }}
 			</div>
-		</div>
+		</div>		 
+<br>
+<div class="form-group mb-4" style="color: rgb(13, 108, 149); font-size: 1.4rem;">
+		{{ form_label(form.allergens) }}
 		<br>
-		<div class="form-group mb-4" style="color: rgb(13, 108, 149); font-size: 1.4rem;">
-			{{ form_label(form.allergens) }}
-			<br>
-			<br>
-			<div class="choiceList-wrapper" style="color: rgb(85, 85, 93);">
-				{% for field in form.allergens %}
-					<div style="min-width: 15%;">
-						{{ form_widget(field) }}
-						{{ form_label(field) }}
-					</div>
-				{% endfor %}
-			</div>
+		<br>
+		<div class="choiceList-wrapper" style="color: rgb(85, 85, 93);">
+			{% for field in form.allergens %}
+				<div style="min-width: 15%;">
+					{{ form_widget(field) }}
+					{{ form_label(field) }}
+				</div>
+			{% endfor %}
 		</div>
-		<hr>
-		<div class="form-group mb-3" style="color: rgb(13, 108, 149); font-size: 1.4rem;">
-			{{ form_label(form.diets) }}
-			<br>
-			<br>
-			<div class="choiceList-wrapper" style="color: rgb(85, 85, 93);">
-				{% for field in form.diets %}
-					<div style="min-width: 15%;">
-						{{ form_widget(field) }}
-						{{ form_label(field) }}
-					</div>
-				{% endfor %}
-			</div>
+</div>
+<hr>
+<div class="form-group mb-3" style="color: rgb(13, 108, 149); font-size: 1.4rem;">
+		{{ form_label(form.diets) }}
+		<br>
+		<br>
+		<div class="choiceList-wrapper" style="color: rgb(85, 85, 93);">
+			{% for field in form.diets %}
+				<div style="min-width: 15%;">
+					{{ form_widget(field) }}
+					{{ form_label(field) }}
+				</div>
+			{% endfor %}
 		</div>
-		<hr>
+		</div>
+<hr>
 		<div class="form-group" style="color: rgb(13, 108, 149); font-size: 1.4rem;">
-			{{ form_label(form.recipes) }}
-			<br>
-			<br>
-			<div class="choiceList-wrapper" style="color: rgb(85, 85, 93);">
-				{% for field in form.recipes %}
-					<div style="min-width: 15%;">
-						{{ form_widget(field) }}
-						{{ form_label(field) }}
-					</div>
-				{% endfor %}
-			</div>
+		{{ form_label(form.recipes) }}
+		<br>
+		<br>
+		<div class="choiceList-wrapper" style="color: rgb(85, 85, 93);">
+			{% for field in form.recipes %}
+				<div style="min-width: 15%;">
+					{{ form_widget(field) }}
+					{{ form_label(field) }}
+				</div>
+			{% endfor %}
 		</div>
-		<hr>
+		</div>
+<hr>
 		<div class="form-group" style="color: rgb(13, 108, 149); font-size: 1.4rem;">
 			{{ form_label(form.dateOfBirth) }}
 			{{ form_widget(form.dateOfBirth) }}
@@ -79,19 +78,38 @@
 				{{ form_errors(form.dateOfBirth) }}
 			</div>
 		</div>
+		<br>
 		<hr>
-		<div class="form-group" style="color: rgb(13, 108, 149); font-size: 1.4rem;">
+	{# <div class="form-group" style="color: rgb(13, 108, 149); font-size: 1.4rem;">
+			{{ form_label(form.createdAt) }}
+			{{ form_widget(form.createdAt) }}
+			<div class="form-error">
+				{{ form_errors(form.createdAt) }}
+			</div>
+		</div> #}
+		<br>
+		<hr>
+		{# <div class="form-group" style="color: rgb(13, 108, 149); font-size: 1.4rem;">
 			{{ form_label(form.roles) }}
 			{{ form_widget(form.roles) }}
 			<div class="form-error">
 				{{ form_errors(form.roles) }}
 			</div>
 		</div>
-		<hr>
-		<div class="form-group" style="font-size: 1.6rem;">
-			{{ form_row(form.submit) }}
+		<hr> #}
+			<div class="form-group mb-4" style="color: rgb(13, 108, 149); font-size: 1.4rem;">
+			{{ form_label(form.plainPassword) }}
+			{{ form_widget(form.plainPassword) }}
+			<div class="form-error">
+				{{ form_errors(form.plainPassword) }}
+			</div>
 		</div>
-		<br><br>
-		{{ form_end(form) }}
-	</div>
-{% endblock %}
+		
+			<div class="form-group" style="font-size: 1.6rem;">
+				{{ form_row(form.submit) }}
+			</div>
+<br><br>
+			{{ form_end(form) }}
+		</div>
+	{% endblock %}
+
