--- a/templates/allergen/index.html.twig
+++ b/templates/allergen/index.html.twig
@@ -1,38 +1,35 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} La liste d'allergènes' {% endblock %}
+{% block title %}Allergen index{% endblock %}
 
 {% block body %}
-<div class="container mt-4">
-<h1>Les allergènes</h1>
+    <h1>Allergen index</h1>
 
-<a href="{{ path('allergen.new') }} " class="btn btn-info">Créer un allergène</a>
-{% for message in app.flashes('success') %}
-<div class="alert alert-success">
-{{ message }}
-</div>
-{%endfor %}
-<table class="table table-hover">
-<thead>
-<tr>
-<th scope="col">Numéro</th>
-<th scope="col">Nom</th>
-<th scope="col">Edition</th>
-<th scope="col">Suppression</th>
-</tr>
-</thead>
-<tbody>
-{% for allergen in allergens %}
-<tr class="table-primary">
-<th scope="row">{{ allergen.id }}</th>
-<td>{{ allergen.name }}</td>
-<td><a href="{{ path('allergen.edit', {id: allergen.id}) }}" class="btn btn-danger">Modifier</a></td>
-<td><a href="{{ path('allergen.delete', {id: allergen.id}) }}" class="btn btn-warning">Supprimer</a>
-</td>
-</tr>
-{% endfor %}
-</tbody>
-</table>
-</div>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for allergen in allergens %}
+            <tr>
+                <td>{{ allergen.id }}</td>
+                <td>{{ allergen.name }}</td>
+                <td>
+                    <a href="{{ path('app_allergen_show', {'id': allergen.id}) }}">show</a>
+                    <a href="{{ path('app_allergen_edit', {'id': allergen.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="3">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+
+    <a href="{{ path('app_allergen_new') }}">Create new</a>
 {% endblock %}
-
