--- a/templates/allergen/new.html.twig
+++ b/templates/allergen/new.html.twig
@@ -1,22 +1,11 @@
 {% extends 'base.html.twig' %}
-{% block title %} Créer un nouveau allergène {% endblock %}
+
+{% block title %}New Allergen{% endblock %}
+
 {% block body %}
-<div class="container">
+    <h1>Create new Allergen</h1>
 
-    <h1 class="mt-4">Créer un allergène</h1>
-    {{ form_start(form) }}
+    {{ include('allergen/_form.html.twig') }}
 
-
-    <div class="form-group">
-        {{ form_label(form.name) }}
-        {{ form_widget(form.name) }}
-        <div class="form-error">
-            {{ form_errors(form.name) }}
-    </div>
-</div>
-    <div class="form-group">
-        {{ form_row(form.submit) }}
-    </div>
-    {{ form_end(form) }}
-</div>
+    <a href="{{ path('app_allergen_index') }}">back to list</a>
 {% endblock %}
