--- a/templates/allergen/show.html.twig
+++ b/templates/allergen/show.html.twig
@@ -12,15 +12,15 @@
                 <td>{{ allergen.id }}</td>
             </tr>
             <tr>
-                <th>Nom</th>
+                <th>Name</th>
                 <td>{{ allergen.name }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('allergen.index') }}">Liste d'allergènes</a>
+    <a href="{{ path('app_allergen_index') }}">back to list</a>
 
-    <a href="{{ path('allergen.edit', {'id': allergen.id}) }}">Modifier</a>
+    <a href="{{ path('app_allergen_edit', {'id': allergen.id}) }}">edit</a>
 
-   
+    {{ include('allergen/_delete_form.html.twig') }}
 {% endblock %}
