--- a/templates/ingredient/edit.html.twig
+++ b/templates/ingredient/edit.html.twig
@@ -1,29 +1,13 @@
 {% extends 'base.html.twig' %}
-{% block title %} Éditer l'ingrédient {% endblock %}
+
+{% block title %}Edit Ingredient{% endblock %}
+
 {% block body %}
-<div class="container">
+    <h1>Edit Ingredient</h1>
 
-<h1 class="mt-4">Modifier l'ingrédient</h1>
+    {{ include('ingredient/_form.html.twig', {'button_label': 'Update'}) }}
 
-{{ form_start(form) }}
-<div class="form-group">
-{{ form_label(form.name) }}
-{{ form_widget(form.name) }}
-<div class="form-error">
-{{ form_errors(form.name) }}
-</div>
-</div>
-<div class="form-group">
-{{ form_label(form.isAllergen) }}
-{{ form_widget(form.isAllergen) }}
-<div class="form-error">
-{{ form_errors(form.isAllergen) }}
-</div>
-</div>
+    <a href="{{ path('app_ingredient_index') }}">back to list</a>
 
-{{ form_end(form) }}
-
-</div>
+    {{ include('ingredient/_delete_form.html.twig') }}
 {% endblock %}
-
-
