--- a/templates/ingredient/index.html.twig
+++ b/templates/ingredient/index.html.twig
@@ -1,47 +1,37 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}
-	La liste d'ingrédients
-{% endblock %}
+{% block title %}Ingredient index{% endblock %}
 
 {% block body %}
-	<div class="container mt-4">
+    <h1>Ingredient index</h1>
 
-		<h1>Mes ingrédients</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>IsAllergen</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for ingredient in ingredients %}
+            <tr>
+                <td>{{ ingredient.id }}</td>
+                <td>{{ ingredient.name }}</td>
+                <td>{{ ingredient.isAllergen ? 'Yes' : 'No' }}</td>
+                <td>
+                    <a href="{{ path('app_ingredient_show', {'id': ingredient.id}) }}">show</a>
+                    <a href="{{ path('app_ingredient_edit', {'id': ingredient.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="4">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-		<a href="{{ path('ingredient.new') }} " class="btn btn-info">Créer un ingrédient</a>
-
-		{% for message in app.flashes('success') %}
-			<div class="alert alert-success">
-				{{ message }}
-			</div>
-		{%endfor %}
-		<table class="table table-hover">
-			<thead>
-				<tr>
-					<th scope="col">Numéro</th>
-					<th scope="col">Nom</th>
-					<th scope="col">Allergène</th>
-					<th scope="col">Edition</th>
-					<th scope="col">Suppression</th>
-				</tr>
-			</thead>
-			<tbody>
-				{% for ingredient in ingredients %}
-					<tr class="table-primary">
-						<th scope="row">{{ ingredient.id }}</th>
-						<td>{{ ingredient.name }}</td>
-						<td>{{ ingredient.isAllergen }}</td>
-						<td>
-							<a href="{{ path('ingredient.edit', {id: ingredient.id}) }}" class="btn btn-danger">Modifier</a>
-						</td>
-						<td>
-							<a href="{{ path('ingredient.delete', {id: ingredient.id}) }}" class="btn btn-warning">Supprimer</a>
-						</td>
-					</tr>
-
-				{% endfor %}
-			</tbody>
-		</table>
-	</div>
+    <a href="{{ path('app_ingredient_new') }}">Create new</a>
 {% endblock %}
