--- a/templates/recipe/new.html.twig
+++ b/templates/recipe/new.html.twig
@@ -106,7 +106,9 @@
 			<div class="form-group mb-4">
 				{{ form_row(form.submit) }}
 			</div>
-
+<div class="form-group">
+{{ form_row(form._token) }}
+</div>
 			{{ form_end(form) }}
 		</div>
 	{% endblock %}
