--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -92,6 +92,7 @@
 			</div>
 		</div>
 		<hr>
+		
 		<div class="form-group mb-4" style="color: rgb(13, 108, 149); font-size: 1.4rem;">
 			{{ form_label(form.plainPassword) }}
 			{{ form_widget(form.plainPassword) }}
@@ -99,10 +100,14 @@
 				{{ form_errors(form.plainPassword) }}
 			</div>
 		</div>
-
+		
+  
 		<div class="form-group" style="font-size: 1.6rem;">
 			{{ form_row(form.submit) }}
 		</div>
+		<div class="form-group">
+{{ form_row(form._token) }}
+</div>
 		<br><br>
 		{{ form_end(form) }}
 	</div>
