--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}
 	Patient
-	{{ user.fullName }}
+	{# {{ user.fullName }} #}
 {% endblock %}
 
 {% block body %}
