--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -1,4 +1,4 @@
-<footer class="d-flex flex-row justify-content-around align-items-center text-center bg-primary mt-5" style="width: 100%; height: 3em;">
+<footer class="d-flex flex-row justify-content-around align-items-center text-center bg-primary mt-5 sm-mb-4" style="width: 100%; height: 3em;">
 
 <div>
 	<a class="nav-link fs-5" href="{{ path('footer.legal_notice') }}" style="color: white;">Mentions légales</a>
