--- a/templates/recipe/recipes.html.twig
+++ b/templates/recipe/recipes.html.twig
@@ -6,8 +6,8 @@
 
 {% block body %}
 	<div class="container mt-4">
-		<h1>Mes recettes</h1>
-		<a href="{{ path('recipe.new') }}" class="btn btn-info">Créer une recette</a>
+		<h1 class="text-center">La liste de recettes</h1>
+		{# <a href="{{ path('recipe.new') }}" class="btn btn-info">Créer une recette</a> #}
 		{% for message in app.flashes('success') %}
 			<div class="alert alert-success">
 				{{ message }}
@@ -19,10 +19,12 @@
 				<tr>
 					<th scope="col">Numéro</th>
 					<th scope="col text-uppercase">Nom</th>
-					<th scope="col">Régime</th> 
+					<th scope="col">Régime</th>
+					<th scope="col">Allergènes</th>
+					<th scope="col">Public</th>
 					<th scope="col">Voir</th>
-					<th scope="col">Edition</th>
-					<th scope="col">Suppression</th>
+					{# <th scope="col">Edition</th>
+					<th scope="col">Suppression</th> #}
 				</tr>
 			</thead>
 			<tbody>
@@ -34,19 +36,40 @@
 							{% for diet in recipe.diets %}
 								{{ diet.name }}
 							{% endfor %}
-						</td> 
-						<td>
-							<a href="{{ path('recipe.show', {id: recipe.id}) }}" class="btn btn-info">Voir</a>
 						</td>
 						<td>
+							{% for allergen in recipe.allergens %}
+								{{ allergen.name }}
+							{% endfor %}
+						</td>
+						<td class="text-capitalize">
+							{% if recipe.isPublic is same as false %}
+								<p>
+									No
+								</p>
+							{% else %}
+								<p>
+									Oui
+								</p>
+							{% endif %}
+						</td>
+
+						<td>
+						{% if recipe.isPublic is same as false %}
+							<a href="{{ path('recipe.show', {id: recipe.id}) }}" class="btn btn-info">Voir</a>
+							{% else %}
+							<a href="{{ path('recipe.show_public', {id: recipe.id}) }}" class="btn btn-info">Voir</a>
+							{% endif %}
+						</td>
+						{# <td>
 							<a href="{{ path('recipe.edit', {id: recipe.id}) }}" class="btn btn-danger">Modifier</a>
 						</td>
 						<td>
 							<a href="{{ path('recipe.delete', {id: recipe.id}) }}" class="btn btn-warning">Supprimer</a>
-						</td>
+						</td> #}
 					</tr>
 				{% endfor %}
 			</tbody>
 		</table>
-		</div>
-		{% endblock %}
+	</div>
+{% endblock %}
