--- a/templates/recipe/show_public.html.twig
+++ b/templates/recipe/show_public.html.twig
@@ -11,6 +11,7 @@
 				{{ message }}
 			</div>
 		{% endfor %}
+		{# {% if recipe.isPublic is same as true %} #}
 		<h1 class="mt-4">{{ recipe.name }}</h1>
 
 		<div class="recipe__image">
@@ -99,18 +100,19 @@
 										</p>
 										<hr class="mx-4">
 									</div>
-
 								</div>
 							</div>
 						</div>
-
 					{% endif %}
 				{% endfor %}
-				<div class="text-center">
-					<button class="btn btn-primary" href="{{ path('recipe.index.public') }}">{{ button_label|default('Vers la liste de recettes') }}</button>
-				</div>
+				{# {% endif %} #}
+
+				{% if is_granted('ROLE_ADMIN') %}
+					<button class="btn btn-primary fs-5 fw-bold mb-5"><a href="{{ path('recipe.recipes') }}">Collection de recettes</a></button>
+				{% else %}
+						<button class="btn btn-primary fs-5 fw-bold mb-5"><a href="{{ path('recipe.index_public') }}">Vers la liste de recettes</a></button>
+				{% endif %}
 			</div>
 		</div>
 	</div>
-
 </div></div>{% endblock %}
