--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,6 +32,6 @@
 	
 		{% block body %}{% endblock %}
 		
-		{# {% include "partials/_footer.html.twig" %} #}
+		{% include "partials/_footer.html.twig" %}
 	</body>
 </html>
