--- a/templates/recipe/show.html.twig
+++ b/templates/recipe/show.html.twig
@@ -11,7 +11,7 @@
 		</div>
 	{% endfor %}
 	<div class="container">
-
+{% if recipe.isPublic is same as false %}
 		<h1 class="mt-4 mb-4 text-capitalize">{{ recipe.name }}</h1>
 
 		<div class="recipe__image easyadmin-lightbox">
@@ -103,9 +103,12 @@
 						<hr class="mx-4">
 					{% endif %}
 				{% endfor %}
-				<div class="text-center">
-					<button class="btn btn-primary" href="{{ path('recipe.index') }}">{{ button_label|default('Vers la liste de recettes') }}</button>
-				</div>
+				{% endif %}
+				{% if is_granted('ROLE_ADMIN') %}
+					<button class="btn btn-primary fs-5 fw-bold mb-5"><a href="{{ path('recipe.recipes') }}">Collection de recettes</a></button>
+				{% else %}
+						<button class="btn btn-primary fs-5 fw-bold mb-5"><a href="{{ path('recipe.index') }}">Vers la liste de recettes</a></button>
+				{% endif %}
 			</div>
 		</div>
 	</div>
