--- a/templates/recipe/index_public.html.twig
+++ b/templates/recipe/index_public.html.twig
@@ -4,8 +4,8 @@
 {% endblock %}
 
 {% block body %}
-	<div class="container mt-4">
-		<h1>Recettes de base</h1>
+	<div class="container mt-4 d-flex flex-sm-column justify-content-center">
+		<h1 class="ms-5">Recettes de base</h1>
 		<div class="d-flex justify-content-center flex-wrap">
 			{% for recipe in recipes %}
 			{% if recipe.isPublic is same as true %}
