--- a/templates/pages/footer/privacy_policy.html.twig
+++ b/templates/pages/footer/privacy_policy.html.twig
@@ -78,7 +78,7 @@ avez consultées, la date et l'heure de la consultation...) que nous pourrons li
 ultérieures.</p>
 <p><span class="fw-bold">Opt-in pour le dépôt de cookies</span></p>
 <p>Nous n'utilisons pas de cookies. Si nous devions en utiliser à l’avenir, vous en seriez informé
-préalablement et auriez la possibilité de désactiver ces cookies.</p
+préalablement et auriez la possibilité de désactiver ces cookies.</p>
 <h3>9 - Conservation des données techniques</h3>
 <p><span class="fw-bold">Durée de conservation des données techniques</span></p>
 <p>Les données techniques sont conservées pour la durée strictement nécessaire à la réalisation
@@ -96,14 +96,14 @@ suppression du compte</span></p>
 des finalités décrites dans les présentes Politiques de confidentialité. Au-delà de cette durée,
 elles seront anonymisées et conservées à des fins exclusivement statistiques et ne donneront
 lieu à aucune exploitation, de quelque nature que ce soit.</p>
-<p><span class="fw-bold">Suppression des données après suppression du compte</span></p
+<p><span class="fw-bold">Suppression des données après suppression du compte</span></p>
 <p>Des moyens de purge de données sont mis en place afin d'en prévoir la suppression effective
 dès lors que la durée de conservation ou d'archivage nécessaire à l'accomplissement des
 finalités déterminées ou imposées est atteinte. Conformément à la loi n°78-17 du 6 janvier 1978
 relative à l'informatique, aux fichiers et aux libertés, vous disposez par ailleurs d'un droit de
 suppression sur vos données que vous pouvez exercer à tout moment en prenant contact avec
 l'Éditeur.</p>
-<p><span class="fw-bold">Suppression des données après 3 ans d'inactivité</span></p
+<p><span class="fw-bold">Suppression des données après 3 ans d'inactivité</span></p>
 <p>Pour des raisons de sécurité, si vous ne vous êtes pas authentifié sur le Site pendant une
 période de trois ans, vous recevrez un e-mail vous invitant à vous connecter dans les plus brefs
 délais, sans quoi vos données seront supprimées de nos bases de données.</p>
