admin crud corrections

--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -1,5 +1,6 @@
 {% extends "@EasyAdmin/page/content.html.twig" %}
 
 {% block content %}
-	<h1>Bienvenue au sein de l'administration</h1>
+	<h1 class="text-center">Administration du site <br>"Sandrine Coupart
+diététicienne-nutritionniste"</h1>
 {% endblock %}
