--- a/templates/recipe/recipes.html.twig
+++ b/templates/recipe/recipes.html.twig
@@ -44,11 +44,11 @@
 						</td>
 						<td class="text-capitalize">
 							{% if recipe.isPublic is same as false %}
-								<p>
+								<p style="color: darkblue;">
 									No
 								</p>
 							{% else %}
-								<p>
+								<p style="color: darkblue; font-weight: semi-bold">
 									Oui
 								</p>
 							{% endif %}
