--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -100,11 +100,15 @@
 				{{ form_errors(form.plainPassword) }}
 			</div>
 		</div>
-		
+		<button type="button" class="btn btn-primary my-4">
+
+		<a href="https://www.motdepasse.xyz/" class="fs-5 text-light mb-4 text-decoration-none" target="_blank" >Générer le mot de passe</a>
+		</button>
   
 		<div class="form-group" style="font-size: 1.6rem;">
 			{{ form_row(form.submit) }}
 		</div>
+		
 		<div class="form-group">
 {{ form_row(form._token) }}
 </div>
