dashboard add style

--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -1,6 +1,9 @@
 {% extends "@EasyAdmin/page/content.html.twig" %}
 
 {% block content %}
-	<h1 class="text-center">Administration du site <br>"Sandrine Coupart
+	<h1 class="text-center" style="z-index: 1;">Administration du site <br>"Sandrine Coupart
 diététicienne-nutritionniste"</h1>
+
+<img src="/assets/images/admin_bg.jpg" alt="bg" style=" height:100vh; position: fixed;" class="img-fluid mb-4 sm-h-50" />
+
 {% endblock %}
