--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -51,9 +51,9 @@
 							<a class="dropdown-item  fw-bold" href="/admin">Tableau de bord</a>
 						{% endif %}
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item fw-bold" href="{{ path('security.logout') }}">Déconnextion</a>
+						<a class="dropdown-item fw-bold" href="{{ path('security.logout') }}">Déconnexion</a>
 										{% endif %}
-				</li>
+				
 			</div>
 		</li>
 	</ul>
