--- a/templates/recipe/new.html.twig
+++ b/templates/recipe/new.html.twig
@@ -102,8 +102,10 @@
 			{{ form_widget(form.isPublic) }}
 			<div class="form-error">
 				{{ form_errors(form.isPublic) }}
-			</div style="width: 200px;">
+				</div>
+			<div style="width: 200px;">
 			{{ form_row(form.imageFile) }}
+			</div>
 			<div class="form-group mb-4">
 				{{ form_row(form.submit) }}
 			</div>
