--- a/templates/pages/contact/index.html.twig
+++ b/templates/pages/contact/index.html.twig
@@ -3,13 +3,14 @@
 {% block title %}Contact{% endblock %}
 
 {% block body %}
+
 <div class="container">
  {% for message in app.flashes('success') %}
         <div class="alert alert-success">
             {{ message }}
         </div>
-    {%endfor %}
-<h1>Contact</h1>
+    {% endfor %}
+<h1 class="text-light">Contact</h1>
 {{ form(form) }}
 </div>
 
