--- a/templates/pages/security/login.html.twig
+++ b/templates/pages/security/login.html.twig
@@ -3,7 +3,7 @@
 {% endblock %}
 {% block body %}
 	<div class="container">
-		<h1 class="mt-4">Formulaire de connexion</h1>
+		<h1 class="mt-4 text-center text-light">Formulaire de connexion</h1>
 		{% for message in app.flashes('success') %}
 			<div class="alert alert-success">
 				{{ message }}
@@ -16,17 +16,17 @@
 		{% endif %}
 		<form action="{{ path('security.login') }}" method="post">
 			<div class="form-group">
-				<label for="username" class="form-label mt-4">Adresse email</label>
+				<label for="username" class="form-label mt-4 text-dark fs-5">Adresse email</label>
 				<input type="email" class="form-control" id="username" name="_username" placeholder="exemple@boom.fr" value="{{ last_username }}">
 				<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
 			</div>
 			<div class="form-group">
-				<label for="password" class="form-label mt-4">Mot de passe</label>
+				<label for="password" class="form-label mt-4 text-dark fs-5">Mot de passe</label>
 				<input type="password" class="form-control" id="password" name="_password" placeholder="********">
 			</div>
 			<button type="submit" class="btn btn-primary mt-4">Se connecter</button>
 		</form>
-		<p class="mt-4">Pas de compte? Inscrivez-vous</p>
+		<p class="mt-4 text-dark fs-5">Pas de compte? Inscrivez-vous</p>
 		<button type="submit" class="btn btn-primary mt-4">
 			<a class="nav-link" href="/inscription">Inscription</a>
 		</button>
