--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary text-light">
+<nav class="navbar navbar-expand-lg navbar-info text-light" style="background-color: #076a67;">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="#"></a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
