--- a/templates/pages/contact/index.html.twig
+++ b/templates/pages/contact/index.html.twig
@@ -10,7 +10,7 @@
             {{ message }}
         </div>
     {% endfor %}
-<h1 class="text-light">Contact</h1>
+<h1 class="text-dark text-center mt-4" style="font-family: \"Libre Baskerville\", serif;">Contact</h1>
 {{ form(form) }}
 </div>
 
