--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,7 @@ body {
   min-height: 100vh;
   justify-content: space-between;
   width: 100%;
-  background-color: #2d8b9e;
+  /* background-color: #4dabbe; */
 }
 
 h1,
