--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 		{% endblock %}
 	</head>
-	<body style="display: flex; flex-direction: column; min-height: 100vh; width: 100%; background-color:  #2d8b9e;">
+	<body style="display: flex; flex-direction: column; min-height: 100vh; width: 100%; background-color:  #82d7e9;">
 		{% block header %}
 		{% include "partials/_nav.html.twig" %}
 		{% endblock %}
